# chat

backend/: Cargo.toml  README.md
backend/.devcontainer/: compose.yaml  devcontainer.json
backend/src/: main.rs
backend/src/controller/: handler.rs
backend/src/domain/: model.rs  repository.rs
backend/src/infrastructure/: database.rs
backend/src/usecase/: channel.rs  message.rs
database/: channels.sql  messages.sql
